# 055-longformer-financial

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  data.py  model.py  strategy.py
rust/: Cargo.toml  README.md
rust/examples/: backtest.rs  fetch_data.rs  train.rs
rust/src/: lib.rs
rust/src/api/: bybit.rs  mod.rs  types.rs
rust/src/attention/: global.rs  mod.rs  sliding_window.rs
rust/src/model/: encoder.rs  longformer.rs  mod.rs
rust/src/strategy/: backtest.rs  mod.rs  signals.rs
