[package]
name = "longformer-financial"
version = "0.1.0"
edition = "2021"
authors = ["Machine Learning for Trading"]
description = "Longformer architecture for financial document analysis and time series processing"
license = "MIT"
readme = "README.md"

[dependencies]
# Neural network and tensor operations
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"

# Async runtime for API calls
tokio = { version = "1.0", features = ["full"] }

# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Parallel processing
rayon = "1.8"

# Progress bars
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train"
path = "examples/train.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[[bench]]
name = "attention"
harness = false
